--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,19 +4,19 @@ stages:
 
 before_script:
     - mix local.hex --force
-    - mix local.rebar --force
+    - mix local.rebar
 
 variables:
     APPLICATION_NAME: astarte_core
 
 mix:test-ci:
-    image: elixir:1.6
+    image: elixir:1.6.5
     stage: build
     script:
         - export MIX_ENV=test
-        - mix deps.get --force
-        - mix deps.compile --force
-        - mix compile --force
+        - mix deps.get
+        - mix deps.compile
+        - mix compile
         - mix coveralls
     cache:
         paths:
@@ -25,13 +25,13 @@ mix:test-ci:
         - branches@Astarte-NG/astarte_core
 
 mix:build:
-    image: elixir:1.6
+    image: elixir:1.6.5
     stage: build
     script:
         - export MIX_ENV=test
-        - mix deps.get --force
-        - mix deps.compile --force
-        - mix compile --force
+        - mix deps.get
+        - mix deps.compile
+        - mix compile
         - mix coveralls
         - export MIX_ENV=dev
         - mix release
@@ -42,13 +42,13 @@ mix:build:
         - master@Astarte-NG/astarte_core
 
 mix:release-build:
-    image: elixir:1.6
+    image: elixir:1.6.5
     stage: build
     script:
         - export MIX_ENV=prod
-        - mix deps.get --force
-        - mix deps.compile --force
-        - mix compile --force
+        - mix deps.get
+        - mix deps.compile
+        - mix compile
         - mix test
         - mix release
     cache:
