--- a/specs/mapping.json
+++ b/specs/mapping.json
@@ -41,6 +41,11 @@
             "default": false,
             "description": "Used only with properties. Used with producers, it generates a method to unset the property. Used with consumers, it generates code to call an unset method when an empty payload is received."
         },
+        "explicit_timestamp": {
+            "type": "boolean",
+            "default": false,
+            "description": "Allow to set a custom timestamp, otherwise a timestamp is added when the message is received. If true explicit timestamp will also be used for sorting. This feature is only supported on datastreams."
+        },
         "description": {
             "type": "string",
             "description": "An optional description of the mapping."
