--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,17 @@
 language: elixir
+dist: bionic
+elixir:
+  - 1.6.5
+otp_release:
+  - 20.3
 env:
   - MIX_ENV=test
-matrix:
-  include:
-    - elixir: 1.6.5
-      otp_release: 20.3
+cache:
+  directories:
+    - deps
+    - _build
 before_script:
   # Needed or Elixir 1.6 will fail due to a non-updated index
   - ~/.mix/rebar3 update
-after_script:
+script:
   - mix coveralls.travis
