--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,50 +1,20 @@
 stages:
-    - build
-    - deploy
-
-before_script:
-    - mix local.hex --force
-    - mix local.rebar
+    - test
 
 variables:
     APPLICATION_NAME: astarte_core
 
-mix:test-ci:
+mix:test-coverage:
+    stage: test
     image: elixir:1.6.5
-    stage: build
-    script:
-        - export MIX_ENV=test
+    cache:
+        key: "$CI_COMMIT_REF_SLUG"
+        paths:
+            - deps
+            - _build
+    before_script:
+        - mix local.hex --force
+        - mix local.rebar
         - mix deps.get
-        - mix deps.compile
-        - mix compile
-        - mix coveralls
-    except:
-        - branches@Astarte-NG/astarte_core
-
-mix:build:
-    image: elixir:1.6.5
-    stage: build
     script:
-        - export MIX_ENV=test
-        - mix deps.get
-        - mix deps.compile
-        - mix compile
         - mix coveralls
-        - export MIX_ENV=dev
-        - mix release
-    only:
-        - master@Astarte-NG/astarte_core
-
-mix:release-build:
-    image: elixir:1.6.5
-    stage: build
-    script:
-        - export MIX_ENV=test
-        - mix deps.get
-        - mix deps.compile
-        - mix compile
-        - mix coveralls
-        - export MIX_ENV=prod
-        - mix release
-    only:
-        - tags@Astarte-NG/astarte_core
