Add database_retention_policy/ttl to mapping JSON schema
Add database_retention_policy and database_retention_ttl.

--- a/specs/mapping.json
+++ b/specs/mapping.json
@@ -36,6 +36,17 @@
             "default": 0,
             "description": "Useful when retention is stored. Defines after how many seconds a specific data entry should be kept before giving up and erasing it from the persistent cache. A value <= 0 means the persistent cache never expires, and is the default."
         },
+        "database_retention_policy": {
+            "type": "string",
+            "enum": ["no_ttl", "use_ttl"],
+            "default": "no_ttl",
+            "description": "Useful only with datastream. Defines whether data is expired from the database after a given time to live interval."
+        },
+        "database_retention_ttl": {
+            "type": "integer",
+            "default": 0,
+            "description": "Useful when database_retention_policy is use_ttl. Defines how many seconds a specific data entry should be kept before erasing it from the database."
+        },
         "allow_unset": {
             "type": "boolean",
             "default": false,
